--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 # ---- Authorization Client Settings ----
-IMJS_AUTH_CLIENT_CLIENT_ID = ""
-IMJS_AUTH_CLIENT_REDIRECT_URI = ""
-IMJS_AUTH_CLIENT_LOGOUT_URI = ""
-IMJS_AUTH_CLIENT_SCOPES ="imodelaccess:read imodels:read realitydata:read"
+IMJS_AUTH_CLIENT_CLIENT_ID=spa-xDcXaCIu4nukEN5jaGHzsG3FJ
+IMJS_AUTH_CLIENT_REDIRECT_URI=http://localhost:3000/signin-callback
+IMJS_AUTH_CLIENT_LOGOUT_URI=http://localhost:3000/logout
+IMJS_AUTH_CLIENT_SCOPES="imodelaccess:read imodels:read realitydata:read"
 IMJS_AUTH_AUTHORITY="https://ims.bentley.com"
 
 # ---- Test ids ----
-IMJS_ITWIN_ID = ""
-IMJS_IMODEL_ID = ""
+IMJS_ITWIN_ID=7029b407-2025-4430-8487-13779121a542
+IMJS_IMODEL_ID=63839967-0539-4588-87fd-ed89fa6e1346
 
 # Advanced CRA Config: https://create-react-app.dev/docs/advanced-configuration/
 SKIP_PREFLIGHT_CHECK=true
