--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.9",
     "redux": "^4.2.1",
-    "typescript": "~4.4.0"
+    "typescript": "~4.4.0",
+    "util": "^0.12.5"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=4096 start",
